--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.17)
+SET(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_C_STANDARD 99)
 
-# TODO: Change to project name
+# TODO: Change name to your project name
 project(asuro_template C)
 
 # MCU name and CPU
@@ -20,17 +21,28 @@ set(INCPATH ${LIBPATH}/inc)
 set(TARGET src/main.c)
 
 # AVR commands
-# TODO: Change to your local AVR directory
+# TODO: Change path to your local AVR directory
 set(AVR C:/WinAVR)
 SET(AVRBIN ${AVR}/bin)
 SET(AVROBJCOPY avr-objcopy)
 SET(AVRSIZE avr-size)
 
+# Include header files
+include_directories(${AVR}/avr/include ${LIBPATH} ${INCPATH})
+
+# All source files
+# TODO: Add your other source files here
+set(SOURCES ${TARGET}
+        ${LIBPATH}/asuro.c ${LIBPATH}/adc.c ${LIBPATH}/adc_low.c ${LIBPATH}/encoder.c
+        ${LIBPATH}/encoder_low.c ${LIBPATH}/globals.c ${LIBPATH}/i2c.c ${LIBPATH}/lcd.c
+        ${LIBPATH}/leds.c ${LIBPATH}/motor.c ${LIBPATH}/motor_low.c ${LIBPATH}/my_motor_low.c
+        ${LIBPATH}/print.c ${LIBPATH}/printf.c ${LIBPATH}/rc5.c ${LIBPATH}/sound.c
+        ${LIBPATH}/switches.c ${LIBPATH}/time.c ${LIBPATH}/uart.c ${LIBPATH}/ultrasonic.c ${LIBPATH}/version.c)
 
 # Compiler settings and flags
 SET(CMAKE_C_COMPILER ${AVRBIN}/avr-gcc)
 
-SET(CMAKE_C_FLAGS  "-mmcu=${MCU} -DF_CPU=${F_CPU} -I. -g -O${OPT} -I${INCPATH} \
+SET(CMAKE_C_FLAGS "-mmcu=${MCU} -DF_CPU=${F_CPU} -I. -g -O${OPT} -I${INCPATH} \
 	-funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums \
 	-ffunction-sections -fdata-sections \
 	-Wall -Wstrict-prototypes")
@@ -46,24 +58,9 @@ set_property(DIRECTORY PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
         "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_PROJECT_NAME}.eep"
         )
 
-# All source files
-# TODO: Add your other source files here
-set(SOURCES ${TARGET} lib/asuro.c lib/adc.c lib/adc_low.c lib/encoder.c lib/encoder_low.c lib/globals.c
-        lib/i2c.c lib/lcd.c lib/leds.c lib/motor.c lib/motor_low.c lib/my_motor_low.c
-        lib/print.c lib/printf.c lib/rc5.c lib/sound.c lib/switches.c lib/time.c lib/uart.c
-        lib/ultrasonic.c lib/version.c)
-
-
-# Include header files
-include_directories(${AVR}/avr/include ${LIBPATH} ${INCPATH})
-
-SET(SOURCE_FILES src/main.c asuro.c adc.c adc_low.c encoder.c encoder_low.c globals.c
-        i2c.c lcd.c leds.c motor.c motor_low.c my_motor_low.c
-        print.c printf.c rc5.c sound.c switches.c time.c uart.c
-        ultrasonic.c version.c)
-
+# Source files and executables
+SET(SOURCE_FILES ${SOURCES})
 ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})
-
 
 # Commands to compile and build hex file
 ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD COMMAND ${AVRBIN}/${AVROBJCOPY} -O ihex -R .eeprom ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_PROJECT_NAME}.elf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_PROJECT_NAME}.hex)
