--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  container:
     runs-on: ubuntu-latest
+    container: lpodkalicki/avr-toolchain
     steps:
-    - uses: actions/checkout@master
-    - uses: bazhenov/action-avr-make@v1.0
+      - uses: actions/checkout@master
+      - run: cmake
+        name: CMake
+      - run: make
+        name: Make
